--- a/sf.conf
+++ b/sf.conf
@@ -2,5 +2,5 @@
 hostname = mcs-mimp-web.sf-express.com
 
 [Script]
-http-request ^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/commonPost\/~memberNonactivity~integralTaskSignPlusService~automaticSignFetchPackage script-path=grab_cookie.js
+http-request ^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/commonPost\/~memberNonactivity~integralTaskSignPlusService~automaticSignFetchPackage script-path=sf.js
 
