--- a/sf.conf
+++ b/sf.conf
@@ -2,5 +2,5 @@
 hostname = mcs-mimp-web.sf-express.com
 
 [Script]
-http-request ^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/commonPost\/~memberNonactivity~integralTaskSignPlusService~automaticSignFetchPackage script-path=sf.js
+^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/commonPost\/~memberNonactivity~integralTaskSignPlusService~automaticSignFetchPackage url script-response-body https://github.com/wcclose/xxxx/blob/main/sf.js 
 
