--- a/sf.conf
+++ b/sf.conf
@@ -1,2 +1,2 @@
 hostname = mcs-mimp-web.sf-express.com
-^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp\/commonPost\/~memberNonactivity~integralTaskSignPlusService~automaticSignFetchPackage url script-response-body https://github.com/wcclose/xxxx/blob/main/sf.js
+^https:\/\/mcs-mimp-web\.sf-express\.com\/mcs-mimp url script-response-body https://github.com/wcclose/xxxx/blob/main/sf.js
